Fri Jan 08 02:35:24 1999  George Lebl  <jirka@5z.com>

	* gnome-dock-item.c: fixed gnome_dock_item_handle_size_request,
	  it was setting the requisition to handle size instead of just
	  adding the handle size ...

1999-01-08  Nat Friedman  <nat@nat.org>

	* gnome-appbar.c (gnome_appbar_construct): Moved the status bar to
 	the left side and the progress meter to the right side.

	* gnome-uidefs.h: Include gdk/gdkkeysyms.h.

1999-01-08  Nat Friedman  <nat@nat.org>

	* gnome-app-helper.h (GNOMEUIINFO_MENU_FIND_AGAIN_ITEM): New menu
 	item.

	* gnome-uidefs.h: Changed to a new set of hotkeys.

1999-01-07  Nat Friedman  <nat@nat.org>

	* gnome-app-helper.h Changed the Options menu to Settings.

1999-01-07  Jonathan Blandford  <jrb@redhat.com>

	* gnome-entry.c (gnome_entry_save_history): changed a bit.  Now
	it's a little tiny bit more efficient, and no longer will save
	duplicate fields.
	(check_for_duplicates): new function.

1999-01-07  Chris Lahey  <clahey@umich.edu>

	* gnome-paper-selector.h, gnome-paper-selector.c
	(gnome_paper_selector_get_width, gnome_paper_selector_get_height):
	Changed it so that these always returned values in units.  Also
	added functions to return the margin values.

1999-01-07  Nat Friedman  <nat@nat.org>

	* gnome-uidefs.h: Replaced (GDK_CONTROL_MASK||GDK_SHIFT_MASK) with (GDK_CONTROL_MASK|GDK_SHIFT_MASK) throughout.

Wed Jan 06 22:32:03 1999  George Lebl  <jirka@5z.com>

	* gnome-app-helper.h: fix properties/preferences stock icons

1999-01-07  Nat Friedman  <nat@nat.org>

	* gnome-app-helper.h Added GNOME_MENU_OPTIONS_STRING and _PATH.
	
1999-01-07  Nat Friedman  <nat@nat.org>

	* gnome-app-helper.h (GNOMEUIINFO_MENU_OPTIONS_TREE): New standard
 	menu.

Wed Jan 06 21:36:16 1999  George Lebl  <jirka@5z.com>

	* gnome-uidefs.h,gnome-app-helper.h: added Find and Replace items
	  and default keybindings for those

1999-01-07  Jonathan Blandford  <jrb@redhat.com>

	* gnome-app.c (gnome_app_set_statusbar): okay -- lets try again.