@@ -1,3 +1,11 @@
+Fri Jan 08 05:35:55 1999  George Lebl  <jirka@5z.com>
+
+	* gnome-stock.c: fix a memory leak when destroying the widget,
+	  some of the states may not have been entered yet so some of the
+	  pixmaps might still be floating, so we just _destroy them
+	  when we destroy the widget, this is the normal behaviour for
+	  gtk containers anyway
+
 Fri Jan 08 02:35:24 1999  George Lebl  <jirka@5z.com>
 
 	* gnome-dock-item.c: fixed gnome_dock_item_handle_size_request,
